update nav_sidebar.css from 5.1.0

--- a/django_admin_dracula/static/admin/css/nav_sidebar.css
+++ b/django_admin_dracula/static/admin/css/nav_sidebar.css
@@ -139,7 +139,7 @@
 
 #nav-filter:focus {
     border-color: var(--dracula-green-tame);  /* dracula theme */
-    outline: none;
+    outline: none;                            /* dracula theme */
 }
 
 /* dracula theme */
